--- a/html-music/css/index.css
+++ b/html-music/css/index.css
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: '微软雅黑';
+  font-size: 14px;
 }
 
 .photo {
@@ -11,4 +13,13 @@
   box-shadow: 0px 0px 2px 2px #fed6e3;
   border-radius: 2%;
   overflow: hidden;
+  text-align: center;
 } 
+
+.photo>div {
+  margin: 10px;
+}
+
+.music {
+  
+}
